--- a/main.html
+++ b/main.html
@@ -8,7 +8,51 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-	<form method></form>
+	<form action="" method="post">
+        <div>
+             <label for="Name">Name*</label>
+             <input type="text" placeholder="Name" id="name" required>
+        </div>
+
+        <div>
+             <label for="Email">Email*</label>
+             <input type="email" placeholder="Email" id="emial" required>
+       </div>
+
+       <div>
+        <label for="gender">Gender*</label>
+        <input type="radio" id="gender" name="Male" required>Male
+        <input type="radio" id="gender" name="Female" required>Female<br> 
+       </div>
+       <label for="cars">Car Brands*</label>
+       <select id="car" required>
+        <option value="placeholder">--Please choose an option--</option>
+        <option value="BMW">BMW</option>
+        <option value="Audi">Audi</option>
+        <option value="Mercedez">Mercedez</option>
+       </select>
+       <div>
+        <label for="age">Age*</label>
+        <input type="date" id="dob" placeholder="Enter ">
+       </div>
+       <div>
+        <label for="phone">Phone Number</label>
+        <input type="te" placeholder="xxx-xxx-xxxx." id="tel">
+       </div>
+       <div>
+        <label for="password">Password*</label>
+        <input type="password" placeholder="Password" id="password" required>
+       </div>
+       <div>
+        <lable>I agree to the TOS</lable>
+        <input type="checkbox" id="tos" required>*
+       </div>
+       <button type="submit">Sumbit Button</button>
+
+       
+
+
+    </form>
     <script type="text/javascript" src="./script.js">
 </script>
 
