--- a/main.html
+++ b/main.html
@@ -3,58 +3,62 @@
 <html>
 
 <head>
-	<link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
-	<!-- the entire body must be written by student -->
-	<form action="" method="post">
+    <!-- the entire body must be written by student -->
+    <form action="" method="post">
         <div>
-             <label for="Name">Name*</label>
-             <input type="text" placeholder="Name" id="name" required>
+            <label for="Name">Name*</label>
+            <input type="text" placeholder="Name" id="name" required>
         </div>
 
         <div>
-             <label for="Email">Email*</label>
-             <input type="email" placeholder="Email" id="emial" required>
-       </div>
+            <label for="Email">Email*</label>
+            <input type="email" placeholder="Email" id="email" required>
+        </div>
 
-       <div>
-        <label for="gender">Gender*</label>
-        <input type="radio" id="gender" name="Male" required>Male
-        <input type="radio" id="gender" name="Female" required>Female<br> 
-       </div>
-       <label for="cars">Car Brands*</label>
-       <select id="car" required>
-        <option value="placeholder">--Please choose an option--</option>
-        <option value="BMW">BMW</option>
-        <option value="Audi">Audi</option>
-        <option value="Mercedez">Mercedez</option>
-       </select>
-       <div>
-        <label for="age">Age*</label>
-        <input type="date" id="dob" placeholder="Enter ">
-       </div>
-       <div>
-        <label for="phone">Phone Number</label>
-        <input type="te" placeholder="xxx-xxx-xxxx." id="tel">
-       </div>
-       <div>
-        <label for="password">Password*</label>
-        <input type="password" placeholder="Password" id="password" required>
-       </div>
-       <div>
-        <lable>I agree to the TOS</lable>
-        <input type="checkbox" id="tos" required>*
-       </div>
-       <button type="submit">Sumbit Button</button>
+        <div>
+            <label for="gender">Gender*</label>
+            <input type="radio" id="gender_m" name="Male" required>Male
+            <input type="radio" id="gender_f" name="Female" required>Female<br>
+        </div>
+        <label for="cars">Car Brands*</label>
+        <select id="cars" required>
+            <option value="placeholder">--Please choose an option--</option>
+            <option value="BMW">BMW</option>
+            <option value="Audi">Audi</option>
+            <option value="Mercedez">Mercedez</option>
+        </select>
+        <div>
+            <label for="age">Age*</label>
+            <input type="date" id="age" placeholder="Enter ">
+        </div>
+        <div>
+            <label for="age">DOB*</label>
+            <input type="date" id="dob" placeholder="Enter ">
+        </div>
+        <div>
+            <label for="phone">Phone Number</label>
+            <input type="te" placeholder="xxx-xxx-xxxx." id="tel">
+        </div>
+        <div>
+            <label for="password">Password*</label>
+            <input type="password" placeholder="Password" id="password" required>
+        </div>
+        <div>
+            <lable>I agree to the TOS</lable>
+            <input type="checkbox" id="tos" required>*
+        </div>
+        <button type="submit">Sumbit Button</button>
 
-       
+
 
 
     </form>
     <script type="text/javascript" src="./script.js">
-</script>
+    </script>
 
 </body>
 
