--- a/main.html
+++ b/main.html
@@ -33,11 +33,11 @@
         </select>
         <div>
             <label for="age">Age*</label>
-            <input type="date" id="age" placeholder="Enter ">
+            <input type="number" id="age" placeholder="Age">
         </div>
         <div>
             <label for="age">DOB*</label>
-            <input type="date" id="dob" placeholder="Enter ">
+            <input type="date" id="dob">
         </div>
         <div>
             <label for="phone">Phone Number</label>
