--- a/main.html
+++ b/main.html
@@ -51,7 +51,7 @@
             <lable>I agree to the TOS</lable>
             <input type="checkbox" id="tos" required>*
         </div>
-        <button type="submit">Sumbit Button</button>
+        <button type="submit">Submit Button</button>
 
 
 
