--- a/main.html
+++ b/main.html
@@ -10,19 +10,19 @@
     <!-- the entire body must be written by student -->
     <form action="" method="post">
         <div>
-            <label for="Name">Name*</label>
+            <label for="name">Name*</label>
             <input type="text" placeholder="Name" id="name" required>
         </div>
 
         <div>
-            <label for="Email">Email*</label>
+            <label for="email">Email*</label>
             <input type="email" placeholder="Email" id="email" required>
         </div>
 
         <div>
             <label for="gender">Gender*</label>
-            <input type="radio" id="gender_m" name="Male" required>Male
-            <input type="radio" id="gender_f" name="Female" required>Female<br>
+            <input type="radio" id="gender_m" name="gender" required>Male
+            <input type="radio" id="gender_f" name="gender" required>Female<br>
         </div>
         <label for="cars">Car Brands*</label>
         <select id="cars" required>
@@ -33,14 +33,14 @@
         </select>
         <div>
             <label for="age">Age*</label>
-            <input type="number" id="age" placeholder="Age">
+            <input type="number" id="age" placeholder="Age" required>
         </div>
         <div>
-            <label for="age">DOB*</label>
+            <label for="dob">DOB*</label>
             <input type="date" id="dob">
         </div>
         <div>
-            <label for="phone">Phone Number</label>
+            <label for="tel">Phone Number</label>
             <input type="te" placeholder="xxx-xxx-xxxx." id="tel">
         </div>
         <div>
@@ -48,7 +48,7 @@
             <input type="password" placeholder="Password" id="password" required>
         </div>
         <div>
-            <lable>I agree to the TOS</lable>
+            <label for="tos">I agree to the TOS</label>
             <input type="checkbox" id="tos" required>*
         </div>
         <button type="submit">Submit Button</button>
