--- a/main.html
+++ b/main.html
@@ -36,7 +36,7 @@
             <input type="number" id="age" placeholder="Age" required>
         </div>
         <div>
-            <label for="dob">DOB*</label>
+            <label for="DOB">DOB*</label>
             <input type="date" id="dob">
         </div>
         <div>
