--- a/main.html
+++ b/main.html
@@ -41,7 +41,7 @@
         </div>
         <div>
             <label for="tel">Phone Number</label>
-            <input type="te" placeholder="xxx-xxx-xxxx." id="tel">
+            <input type="tel" placeholder="xxx-xxx-xxxx." id="tel">
         </div>
         <div>
             <label for="password">Password*</label>
