--- a/main.html
+++ b/main.html
@@ -36,8 +36,8 @@
             <input type="number" id="age" placeholder="Age" required>
         </div>
         <div>
-            <label for="DOB">DOB*</label>
-            <input type="date" id="dob">
+            <label for="dob">DOB*</label>
+            <input type="date" id="dob" required>
         </div>
         <div>
             <label for="tel">Phone Number</label>
